--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>HomePage</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./css/style.css">
+	<title>TestTube</title>
 </head>
 <body>
-    <h1>Home</h1>
+	<!-- Header -->
+	<div class="header">
+		<h1>TestTube</h1>
+	</div>
+
+	<!-- Nav -->
+	<div class="nav">
+		<a href="about.html">About Us</a>
+		<a href="https://github.com/prasannakroy/Test-Case-Generator/">Source Code</a>
+		<a href="#footer">Contact Us</a>
+	</div>
+
+	<div class="clearfix"></div>
+
+	<!-- Section -->
+	<section>
+		<div>
+			<!-- Description -->
+			<div class="description">
+				Lorem ipsum dolor sinit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</div>
+			<!-- Element Cards -->
+			<div class="cards">
+				<div class="algo-cards">
+					<img src="./image/Arrays.png">
+					<div class="card-desc">
+						<p>Numerical Array</p>
+						<button onClick="">></button>
+					</div>
+				</div>
+
+				<div class="algo-cards">
+					<img src="./image/Arrays.png">
+					<div class="card-desc">
+						<p>Character Array</p>
+						<button onClick="">></button>
+					</div>
+				</div>
+
+				<div class="algo-cards">
+					<img src="./image/Arrays.png">
+					<div class="card-desc">
+						<p>Tree</p>
+						<button onClick="">></button>
+					</div>	
+				</div>
+
+				<div class="algo-cards">
+					<img src="./image/Arrays.png">
+					<div class="card-desc">
+						<p>Graph</p>
+						<button onClick="">></button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer class="footer" id="footer">
+		<div class="online-presence">
+			<h3>Social Media Presence</h3>
+			<ul>
+				<li><a href="https://github.com/prasannakroy" target="_blank">GitHub</a></li>
+				<li><a href="https://www.linkedin.com/in/prasanna-kumar-10b366193/" target="_blank">LinkedIn</a></li>
+				<li><a href="" target="_blank">Twitter</a></li>
+			</ul>
+			<h3>Coding Profiles</h3>
+			<ul>
+				<li><a href="https://codeforces.com/profile/prasanna2425" target="_blank">Codeforces</a></li>
+				<li><a href="https://www.codechef.com/users/prasanna2425" target="_blank">Codechef</a></li>
+				<li><a href="https://www.hackerrank.com/profile/prasanna2425" target="_blank">Hackerrank</a></li>
+			</ul>
+		</div>
+		<p class="copyright">Prasanna Kumar © 2021</p>
+	</footer>
+
 </body>
 </html>
