--- a/public/numArray.html
+++ b/public/numArray.html
@@ -16,7 +16,7 @@
 	<!-- Nav -->
 	<div class="nav">
 		<a href="/about">About Us</a>
-		<a href="https://github.com/prasannakroy/Test-Case-Generator/">Source Code</a>
+		<a href="https://github.com/prasannakroy/Test-Case-Generator/" target="_blank">Source Code</a>
 		<a href="#footer">Contact Us</a>
 	</div>
 
@@ -34,33 +34,25 @@
 				<div class="algo-cards">
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
-						<p>Numerical Array</p>
-						<button onClick="location.href = '/ds?name=numArray';">></button>
+						<p>Simple Array</p>
+						<button onClick="">></button>
 					</div>
 				</div>
 
 				<div class="algo-cards">
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
-						<p>Character Array</p>
-						<button onClick="location.href = '/ds?name=charArray';">></button>
+						<p>Permutation</p>
+						<button onClick="">></button>
 					</div>
 				</div>
 
 				<div class="algo-cards">
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
-						<p>Tree</p>
-						<button onClick="location.href = '/ds?name=tree';">></button>
+						<p>Sorted Array</p>
+						<button onClick="">></button>
 					</div>	
-				</div>
-
-				<div class="algo-cards">
-					<img src="./image/Arrays.png">
-					<div class="card-desc">
-						<p>Graph</p>
-						<button onClick="location.href = '/ds?name=graph';">></button>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -84,6 +76,6 @@
 		</div>
 		<p class="copyright">Prasanna Kumar © 2021</p>
 	</footer>
+
 </body>
-<script type="text/javascript" src="./js/index.js"></script> 
 </html>
