--- a/public/tree.html
+++ b/public/tree.html
@@ -35,7 +35,7 @@
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
 						<p>Numerical Array</p>
-						<button onClick="location.href = '/ds?name=numArray';">></button>
+						<button onClick="">></button>
 					</div>
 				</div>
 
@@ -43,7 +43,7 @@
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
 						<p>Character Array</p>
-						<button onClick="location.href = '/ds?name=charArray';">></button>
+						<button onClick="">></button>
 					</div>
 				</div>
 
@@ -51,7 +51,7 @@
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
 						<p>Tree</p>
-						<button onClick="location.href = '/ds?name=tree';">></button>
+						<button onClick="">></button>
 					</div>	
 				</div>
 
@@ -59,7 +59,7 @@
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
 						<p>Graph</p>
-						<button onClick="location.href = '/ds?name=graph';">></button>
+						<button onClick="">></button>
 					</div>
 				</div>
 			</div>
@@ -84,6 +84,6 @@
 		</div>
 		<p class="copyright">Prasanna Kumar © 2021</p>
 	</footer>
+
 </body>
-<script type="text/javascript" src="./js/index.js"></script> 
 </html>
