--- a/public/charArray.html
+++ b/public/charArray.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
-	<title>TestTube</title>
+	<title>CharArray</title>
 </head>
 <body>
 	<!-- Header -->
 	<div class="header">
-		<h1>TestTube</h1>
+		<h1><a href="/index">TestHub</a></h1>
 	</div>
 
 	<!-- Nav -->
@@ -19,8 +19,6 @@
 		<a href="https://github.com/prasannakroy/Test-Case-Generator/">Source Code</a>
 		<a href="#footer">Contact Us</a>
 	</div>
-
-	<div class="clearfix"></div>
 
 	<!-- Section -->
 	<section>
@@ -34,32 +32,14 @@
 				<div class="algo-cards">
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
-						<p>Numerical Array</p>
-						<button onClick="">></button>
-					</div>
-				</div>
-
-				<div class="algo-cards">
-					<img src="./image/Arrays.png">
-					<div class="card-desc">
 						<p>Character Array</p>
-						<button onClick="">></button>
 					</div>
 				</div>
 
 				<div class="algo-cards">
 					<img src="./image/Arrays.png">
 					<div class="card-desc">
-						<p>Tree</p>
-						<button onClick="">></button>
-					</div>	
-				</div>
-
-				<div class="algo-cards">
-					<img src="./image/Arrays.png">
-					<div class="card-desc">
-						<p>Graph</p>
-						<button onClick="">></button>
+						<p>String Array</p>
 					</div>
 				</div>
 			</div>
