--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
-	<title>TestTube</title>
+	<title>TestHub</title>
 </head>
 <body>
 	<!-- Header -->
 	<div class="header">
-		<h1>TestTube</h1>
+		<h1><a href="/index">TestHub</a></h1>
 	</div>
 
 	<!-- Nav -->
@@ -19,8 +19,6 @@
 		<a href="https://github.com/prasannakroy/Test-Case-Generator/">Source Code</a>
 		<a href="#footer">Contact Us</a>
 	</div>
-
-	<div class="clearfix"></div>
 
 	<!-- Section -->
 	<section>
@@ -32,35 +30,43 @@
 			<!-- Element Cards -->
 			<div class="cards">
 				<div class="algo-cards">
-					<img src="./image/Arrays.png">
-					<div class="card-desc">
-						<p>Numerical Array</p>
-						<button onClick="location.href = '/ds?name=numArray';">></button>
-					</div>
+          <a href="/form?ds=numArray&&id=1">
+            <img src="./image/Arrays.png">
+          </a>
+            <div class="card-desc">
+              <p><a href="/form?ds=numArray&&id=1">Numerical Array</a></p>
+              <button onClick="location.href = '/ds?name=numArray';">></button>
+            </div>
 				</div>
 
 				<div class="algo-cards">
-					<img src="./image/Arrays.png">
-					<div class="card-desc">
-						<p>Character Array</p>
-						<button onClick="location.href = '/ds?name=charArray';">></button>
-					</div>
+          <a href="/form?ds=charArray&&id=1">
+            <img src="./image/Arrays.png">
+          </a>
+            <div class="card-desc">
+              <p><a href="/form?ds=charArray&&id=1">Character Array</a></p>
+              <button onClick="location.href = '/ds?name=charArray';">></button>
+            </div>
 				</div>
 
 				<div class="algo-cards">
-					<img src="./image/Arrays.png">
-					<div class="card-desc">
-						<p>Tree</p>
-						<button onClick="location.href = '/ds?name=tree';">></button>
-					</div>	
+          <a href="/form?ds=tree&&id=1">
+            <img src="./image/Arrays.png">
+          </a>
+            <div class="card-desc">
+              <p><a href="/form?ds=tree&&id=1">Character Array</a></p>
+              <button onClick="location.href = '/ds?name=tree';">></button>
+            </div>
 				</div>
 
 				<div class="algo-cards">
-					<img src="./image/Arrays.png">
-					<div class="card-desc">
-						<p>Graph</p>
-						<button onClick="location.href = '/ds?name=graph';">></button>
-					</div>
+          <a href="/form?ds=graph&&id=1">
+            <img src="./image/Arrays.png">
+          </a>
+            <div class="card-desc">
+              <p><a href="/form?ds=graph&&id=1">Character Array</a></p>
+              <button onClick="location.href = '/ds?name=graph';">></button>
+            </div>
 				</div>
 			</div>
 		</div>
