--- a/public/forms/numArray/1.html
+++ b/public/forms/numArray/1.html
@@ -33,11 +33,11 @@
       <input type="text" id="size" placeholder="Product <= 1000000"/>
     </div>
     <div class="attributes">
-      <p>Lower Bound Elements : </p>
+      <p>Lower Bound : </p>
       <input type="number" id="lBound" placeholder="-2^63 <= lBound < 2^63"/>
     </div>
     <div class="attributes">
-      <p>Upper Bound Elements : </p>
+      <p>Upper Bound : </p>
       <input type="number" id="rBound" placeholder="lbound <= rbound < 2^63"/>
     </div>
     <div class="submit">
